Modified index.html and added main.py

--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Name Generator</title>
 </head>
+
 <body>
     <p>hello</p>
-    <p>please enter your date of birth below:</p>
+    <p>today, you will receive a new name; this is your true name. don't forget it</p>
     <form>
-        <input type="date">
+        <fieldset>
+            <legend>When were you born?</legend><br>
+            <input type="date" name="dateofbirth"><br><br>
+            <input type="submit" value="Click me, please. Yes, you. Here. Click Me.">
+        </fieldset>
     </form>
+    <p>your new name is as follows:</p>
 </body>
+
 </html>
