Edit index.html and delete script.js

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Name Generator</title>
 </head>
 
@@ -31,8 +32,8 @@
             "wily ",
             "hypnotic ",
             "rascally ",
-            "roguish ",
-            "mischievous ",
+            "kurwa ",
+            "mischevous ",
             "brazen ",
             "cheeky ",
             "disobedient "
@@ -57,7 +58,7 @@
             "hippopotamus",
             "zebra",
             "gazelle",
-            "platypus",
+            "bobr <3",
             "crocodile",
             "ostrich",
             "armadillo",
