--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
     <title>Name Generator</title>
 </head>
 
@@ -13,9 +16,9 @@
     <p>today, you will receive a new name; this is your true name. don't forget it.</p>
     <form>
         <fieldset>
-            <legend>When were you born?</legend>
-            <p>Day: <input id="Day"></p>
-            <p>Month: <input id="Month"></p>
+            <legend>when were you born?</legend>
+            <p>day: <input id="Day"></p>
+            <p>month: <input id="Month"></p>
             <input id="rename" type="submit" value="Click me, please. Yes, you. Here. Click Me.">
         </fieldset>
     </form>
@@ -73,8 +76,21 @@
         ];
         
         rename.onclick = () => {
-            const newName = (First_name[Number(Month.value) - 1] + Last_name[Number(Day.value) - 1]);
-            alert(`Your new name, from now until forever, is: ${newName}`);
+            if (Day.value > 31 || Day.value < 0) {
+                alert("Pshh, that's not a valid calendar day. Try again.");
+            }
+            else if (Day.value == "") {
+                alert("Oops, I think you forgot to input a day.");
+            }
+            else if (Month.value > 12 || Month.value < 0) {
+                alert("Sneaky, sneaky. That's not a valid calendar month! Try again.");
+            } 
+            else if (Month.value == "") {
+                alert("Oops, where's the month?");
+            } else {
+                const newName = (First_name[Number(Month.value) - 1] + Last_name[Number(Day.value) - 1]);
+                alert(`Your new name, from now until forever, is: ${newName}`);
+            }
         }
 
     </script>
